# market-state-analyzer-V1

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backtesting/: engine.py  monte_carlo.py  walk_forward.py
core/: ai_explanation.py  charts.py  confidence.py  config.py  explanations.py  indicators.py  market_state.py  portfolio.py  regime.py  report.py  risk.py  scanner.py  signals.py  structure.py
data/: providers.py
docs/screenshots/: README.md
examples/: AAPL_report.md
tests/: test_ai_explanation.py  test_backtest.py  test_confidence.py  test_config.py  test_indicators.py  test_monte_carlo.py  test_regime.py  test_risk.py  test_signals.py  test_walk_forward.py
ui/: streamlit_app.py
